# random-pointer-list-serialization

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  list.cpp  list.h  list_serializer.cpp  list_serializer.h
test/: CMakeLists.txt  assert.h  main.cpp  tests.cpp  tests_list.h
